# p44mbrd

./: .clang-format  .gitignore  .gitmodules  COPYING  README.md  compile_commands.json  device_impl.h  important_file_paths.txt  openwrt_build.sh  pregen_code.sh
bridge-common/: bridge-app.matter  bridge-app.zap
bridge-common/include/: CHIPProjectAppConfig.h
gen-copy/zap/app/: PluginApplicationCallbacks.h  callback-stub.cpp
gen-copy/zap/zap_pregen/zap-generated/: access.h  endpoint_config.h
gen-copy/zap/zapgen/zap-generated/: CHIPClusters.h  IMClusterCommandHandler.cpp  gen_config.h
linux/: BUILD.gn  Device.cpp  Device.h  DeviceColorControl.cpp  DeviceColorControl.h  DeviceLevelControl.cpp  DeviceLevelControl.h  DeviceOnOff.cpp  DeviceOnOff.h  args.gni  bridgeapi.cpp  bridgeapi.hpp  bridged-actions-stub.cpp  build_overrides  main.cpp  main.h
linux/include/: Device.h  main.h
linux/zap-generated/: Clusters.matter  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
p44mbrd.xcodeproj/: project.pbxproj
p44mbrd.xcodeproj/project.xcworkspace/xcuserdata/luz.xcuserdatad/xcdebugger/: Expressions.xcexplist
p44mbrd.xcodeproj/xcshareddata/xcschemes/: p44mbrd.xcscheme
p44mbrd.xcodeproj/xcuserdata/luz.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
p44mbrd.xcodeproj/xcuserdata/luz.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: .gitignore  BUILD.gn  args.gni  darwinlogger.cpp  deviceinfoprovider.cpp  deviceinfoprovider.hpp  matter_common.h  p44mbrd_common.h  p44mbrd_main.cpp  p44mbrd_main.h  p44utils_config.hpp
src/adapters/: adapter.h  adapters.cpp  adapters.h  bridgeadapter.cpp  bridgeadapter.h
src/adapters/cc/: ccbridge.cpp  ccbridge.h  ccdevices.cpp  ccdevices.h
src/adapters/cc51/: cc51bridge.cpp  cc51bridge.h  cc51devices.cpp  cc51devices.h
src/adapters/p44/: p44bridge.cpp  p44bridge.h  p44bridgeapi.cpp  p44bridgeapi.h  p44bridgeapi_defs.h  p44devices.cpp  p44devices.h
src/bridge/: actions.cpp  actions.h
src/bridgeapi/: bridgeapi.cpp  bridgeapi.h
src/chip_glue/: chip_error.cpp  chip_error.h  deviceattestationprovider.cpp  deviceattestationprovider.h  deviceinfoprovider.cpp  deviceinfoprovider.h  factorydataprovider.cpp  factorydataprovider.h  p44deviceattestationprovider.cpp  p44deviceattestationprovider.h  p44deviceinstanceinfoprovider.cpp  p44deviceinstanceinfoprovider.h
src/devices/: booleaninputdevices.cpp  booleaninputdevices.h  device.cpp  device.h  device_impl.h  devicecolorcontrol.cpp  devicecolorcontrol.h  devicefancontrol.cpp  devicefancontrol.h  devicelevelcontrol.cpp  devicelevelcontrol.h  deviceonoff.cpp  deviceonoff.h  devices.cpp  devices.hpp  devicewindowcovering.cpp  devicewindowcovering.h  sensordevices.cpp  sensordevices.h  switchdevices.cpp  switchdevices.h
src/pregen/p44mbrd/codegen/cpp-app/app/: PluginApplicationCallbacks.h  callback-stub.cpp  cluster-init-callback.cpp
src/pregen/p44mbrd/zap/app-templates/zap-generated/: CHIPClusters.h  IMClusterCommandHandler.cpp  access.h  endpoint_config.h  gen_config.h
src/utils/: matter_utils.cpp  matter_utils.h
src/zap/: BUILD.gn  p44mbrd-FULL.zap  p44mbrd.matter  p44mbrd.zap
src/zap-generated/: CHIPClientCallbacks.h  CHIPClusters.h  Clusters.matter  IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
src/zap/include/: CHIPProjectAppConfig.h
xcode-gen-copy/zap/: zap_zapgen.keep.outputs
xcode-gen-copy/zap/app/: PluginApplicationCallbacks.h  callback-stub.cpp
xcode-gen-copy/zap/zap_pregen/zap-generated/: IMClusterCommandHandler.cpp  endpoint_config.h
xcode-gen-copy/zap/zapgen/zap-generated/: IMClusterCommandHandler.cpp  access.h  endpoint_config.h  gen_config.h
xcode-include/ble/: BleBuildConfig.h
xcode-include/core/: CHIPBuildConfig.h
xcode-include/crypto/: CryptoBuildConfig.h
xcode-include/inet/: InetBuildConfig.h
xcode-include/platform/: CHIPDeviceBuildConfig.h
xcode-include/platform/Linux/dbus/bluez/: DbusBluez.c
xcode-include/system/: SystemBuildConfig.h
