# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

import("${chip_root}/config/standalone/args.gni")

chip_device_project_config_include = "<CHIPProjectAppConfig.h>"
chip_project_config_include = "<CHIPProjectAppConfig.h>"
chip_system_project_config_include = "<SystemProjectConfig.h>"

chip_project_config_include_dirs = [ "//zap/include" ]
chip_project_config_include_dirs += [ "${chip_root}/config/standalone" ]

# p44mbrd specifics extra config
default_configs_extra = [ "//:p44mbrd_config_extra" ]

# zero warning policy
treat_warnings_as_errors = true

# p44utils needs things like dynamic_cast<>
enable_rtti = true

# we want to use avahi (=Linux platform dns-sd, not minimal-mdns)
chip_mdns = "platform"

# we do not want BLE
chip_config_network_layer_ble = false

# we do not want Wifi
chip_enable_wifi=false

# we do not want Openthread
chip_enable_openthread=false

# we want to have the (command line) options to write and decode transport traces
chip_enable_transport_trace = true

# we need libev, not dispatch (even on macos)
chip_system_config_use_libev = true

# we need libev, not dispatch (even on macos)
chip_system_config_use_dispatch = false

# we want posix locking
chip_system_config_locking = "posix"


# Potential other default args
# ----------------------------

# %%% Samples only for now %%%
#matter_device_vid = "0xFFF1"
#matter_device_pid = "0x8002"
#matter_software_ver = "0x0001"
#matter_software_ver_str = "1.0d1"


# switch off logging
#chip_logging = false

# reduce CHIP Logging
#chip_error_logging = false
#chip_progress_logging = false
#chip_detail_logging = false
#chip_automation_logging = false
